--- a/priv/www/js/tmpl/federation-upstream.ejs
+++ b/priv/www/js/tmpl/federation-upstream.ejs
@@ -6,31 +6,31 @@
     <table class="facts">
       <tr>
         <th>URI</th>
-        <td><%= upstream.value.uri %></td>
+        <td><%= fmt_string(upstream.value.uri) %></td>
       </tr>
       <tr>
         <th>Expires</th>
-        <td><%= upstream.value.expires %>ms</td>
+        <td><%= fmt_string(upstream.value.expires) %>ms</td>
       </tr>
       <tr>
         <th>Message TTL</th>
-        <td><%= upstream.value.message_ttl %>ms</td>
+        <td><%= fmt_string(upstream.value.message_ttl) %>ms</td>
       </tr>
       <tr>
         <th>Max Hops</th>
-        <td><%= upstream.value.max_hops %></td>
+        <td><%= fmt_string(upstream.value.max_hops) %></td>
       </tr>
       <tr>
         <th>Prefetch Count</th>
-        <td><%= upstream.value.prefetch_count %></td>
+        <td><%= fmt_string(upstream.value.prefetch_count) %></td>
       </tr>
       <tr>
         <th>Reconnect Delay</th>
-        <td><%= upstream.value.reconnect_delay %>s</td>
+        <td><%= fmt_string(upstream.value.reconnect_delay) %>s</td>
       </tr>
       <tr>
         <th>HA Policy</th>
-        <td><%= upstream.value.ha_policy %></td>
+        <td><%= fmt_string(upstream.value.ha_policy) %></td>
       </tr>
     </table>
   </div>
