Um, we did this on the listing page some time ago, why not do it on the detail page too?

--- a/priv/www/js/tmpl/federation-upstream.ejs
+++ b/priv/www/js/tmpl/federation-upstream.ejs
@@ -10,11 +10,11 @@
       </tr>
       <tr>
         <th>Expires</th>
-        <td><%= fmt_string(upstream.value.expires) %>ms</td>
+        <td><%= fmt_time(upstream.value.expires, 'ms') %></td>
       </tr>
       <tr>
         <th>Message TTL</th>
-        <td><%= fmt_string(upstream.value.message_ttl) %>ms</td>
+        <td><%= fmt_time(upstream.value.message_ttl, 'ms') %></td>
       </tr>
       <tr>
         <th>Max Hops</th>
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <th>Reconnect Delay</th>
-        <td><%= fmt_string(upstream.value.reconnect_delay) %>s</td>
+        <td><%= fmt_time(upstream.value.reconnect_delay, 's') %></td>
       </tr>
       <tr>
         <th>HA Policy</th>
