Make that weirdly implemented table filter by vhost

--- a/priv/www/js/tmpl/federation.ejs
+++ b/priv/www/js/tmpl/federation.ejs
@@ -92,6 +92,8 @@
 <%
        for (var i = 0; i < vhosts.length; i++) {
          var vhost = vhosts[i];
+         if (current_vhost != '' && current_vhost != vhost.name) continue;
+
          var username = null;
          var nodename = null;
 
