--- a/priv/www/js/tmpl/federation-upstream.ejs
+++ b/priv/www/js/tmpl/federation-upstream.ejs
@@ -18,23 +18,23 @@
       </tr>
       <tr>
         <th>Message TTL</th>
-        <td><%= fmt_time(upstream.value.message_ttl, 'ms') %></td>
+        <td><%= fmt_time(upstream.value['message-ttl'], 'ms') %></td>
       </tr>
       <tr>
         <th>Max Hops</th>
-        <td><%= fmt_string(upstream.value.max_hops) %></td>
+        <td><%= fmt_string(upstream.value['max-hops']) %></td>
       </tr>
       <tr>
         <th>Prefetch Count</th>
-        <td><%= fmt_string(upstream.value.prefetch_count) %></td>
+        <td><%= fmt_string(upstream.value['prefetch-count']) %></td>
       </tr>
       <tr>
         <th>Reconnect Delay</th>
-        <td><%= fmt_time(upstream.value.reconnect_delay, 's') %></td>
+        <td><%= fmt_time(upstream.value['reconnect-delay'], 's') %></td>
       </tr>
       <tr>
         <th>HA Policy</th>
-        <td><%= fmt_string(upstream.value.ha_policy) %></td>
+        <td><%= fmt_string(upstream.value['ha-policy']) %></td>
       </tr>
     </table>
   </div>
