--- a/priv/www/js/tmpl/federation.ejs
+++ b/priv/www/js/tmpl/federation.ejs
@@ -6,7 +6,7 @@
 <table class="list">
  <thead>
   <tr>
-    <th>Connection</th>
+    <th>Upstream</th>
     <th>URI</th>
 <% if (vhosts_interesting) { %>
     <th>Virtual Host</th>
@@ -27,9 +27,9 @@
 %>
    <tr<%= alt_rows(i)%>>
     <td>
-      <%= fmt_string(link.connection) %>
-      <% if (link.name != link.upstream_name) { %>
-      <sub><%= fmt_string(link.upstream_name) %></sub>
+      <%= fmt_string(link.upstream) %>
+      <% if (link.object_name != link.upstream_object_name) { %>
+        <sub><%= fmt_string(link.upstream_object_name) %></sub>
       <% } %>
     </td>
     <td><%= fmt_string(link.uri) %></td>
@@ -38,9 +38,9 @@
 <% } %>
     <td>
       <% if (link.type == 'exchange') { %>
-        <%= link_exchange(link.vhost, link.name) %>
+        <%= link_exchange(link.vhost, link.object_name) %>
       <% } else { %>
-        <%= link_queue(link.vhost, link.name) %>
+        <%= link_queue(link.vhost, link.object_name) %>
       <% } %>
     <sub><%= fmt_string(link.type) %></sub>
     </td>
