Don't talk about objects, we do that nowhere else.

--- a/priv/www/js/tmpl/federation.ejs
+++ b/priv/www/js/tmpl/federation.ejs
@@ -28,8 +28,12 @@
    <tr<%= alt_rows(i)%>>
     <td>
       <%= fmt_string(link.upstream) %>
-      <% if (link.object_name != link.upstream_object_name) { %>
-        <sub><%= fmt_string(link.upstream_object_name) %></sub>
+      <% if (link.type == 'exchange' &&
+             link.exchange != link.upstream_exchange) { %>
+        <sub><%= fmt_string(link.upstream_exchange) %></sub>
+      <% } else if (link.type == 'queue' &&
+                    link.queue != link.upstream_queue) { %>
+        <sub><%= fmt_string(link.upstream_queue) %></sub>
       <% } %>
     </td>
     <td><%= fmt_string(link.uri) %></td>
@@ -38,9 +42,9 @@
 <% } %>
     <td>
       <% if (link.type == 'exchange') { %>
-        <%= link_exchange(link.vhost, link.object_name) %>
+        <%= link_exchange(link.vhost, link.exchange) %>
       <% } else { %>
-        <%= link_queue(link.vhost, link.object_name) %>
+        <%= link_queue(link.vhost, link.queue) %>
       <% } %>
     <sub><%= fmt_string(link.type) %></sub>
     </td>
