--- a/priv/www/js/tmpl/federation-upstream.ejs
+++ b/priv/www/js/tmpl/federation-upstream.ejs
@@ -62,7 +62,7 @@
 
        <tr>
           <th>
-          <h3>Federated queue parameter </h3>
+          <h3>Federated queues parameter </h3>
          </th>
         </tr>
 
