--- a/priv/www/js/tmpl/federation-upstream.ejs
+++ b/priv/www/js/tmpl/federation-upstream.ejs
@@ -6,7 +6,7 @@
     <table class="facts">
        <tr>
           <th>
-          <h3>  General parameters </h3>
+          <h3>General parameters</h3>
          </th>
       <tr>
         <th>URI</th>
@@ -31,7 +31,7 @@
 
        <tr>
           <th>
-          <h3>Federated exchanges parameters </h3>
+          <h3>Federated exchange parameters</h3>
          </th>
         </tr>
       <tr>
@@ -62,7 +62,7 @@
 
        <tr>
           <th>
-          <h3>Federated queues parameter </h3>
+          <h3>Federated queue parameters</h3>
          </th>
         </tr>
 
