--- a/priv/www/js/tmpl/federation-upstreams.ejs
+++ b/priv/www/js/tmpl/federation-upstreams.ejs
@@ -34,7 +34,11 @@
 <% if (vhosts_interesting) { %>
      <td><%= fmt_string(upstream.vhost) %></td>
 <% } %>
+<% if (is_user_policymaker) { %>
      <td><%= link_fed_conn(upstream.vhost, upstream.name) %></td>
+<% } else { %>
+     <td><%= fmt_string(upstream.name) %></td>
+<% } %>
      <td><%= fmt_shortened_uri(upstream.value.uri) %></td>
      <td class="r"><%= upstream.value['prefetch-count'] %></td>
      <td class="r"><%= fmt_time(upstream.value['reconnect-delay'], 's') %></td>
@@ -55,7 +59,7 @@
 <% } %>
   </div>
 </div>
-
+<% if(is_user_policymaker) { %>
 <div class="section-hidden">
   <h2>Add a new upstream</h2>
   <div class="hider">
@@ -251,3 +255,4 @@
     </ul>
   </div>
 </div>
+<% } %>
