Allow to set and display consumer tag for federation.

--- a/priv/www/js/tmpl/federation-upstream.ejs
+++ b/priv/www/js/tmpl/federation-upstream.ejs
@@ -71,6 +71,11 @@
         <td><%= fmt_string(upstream.value['queue']) %></td>
       </tr>
 
+      <tr>
+        <th>Consumer tag</th>
+        <td><%= fmt_string(upstream.value['consumer-tag']) %></td>
+      </tr>
+
 
 
     </table>
