--- a/priv/www/js/tmpl/federation.ejs
+++ b/priv/www/js/tmpl/federation.ejs
@@ -84,7 +84,7 @@
     <td><%= link.id %></td>
     <td><%= link.consumer_tag %></td>
     <td>
-        <form action="#/restart-link" method="delete" class="confirm">
+        <form action="#/federation-restart-link" method="delete" class="confirm">
         <input type="hidden" name="id" value="<%= link.id %>"/>
         <input type="hidden" name="node" value="<%= link.node %>"/>
         <input type="hidden" name="vhost" value="<%= link.vhost %>"/>
