--- a/priv/www/js/tmpl/federation.ejs
+++ b/priv/www/js/tmpl/federation.ejs
@@ -84,8 +84,8 @@
     <td>
         <form action="#/federation-restart-link" method="delete" class="confirm">
         <input type="hidden" name="id" value="<%= link.id %>"/>
-        <input type="hidden" name="node" value="<%= link.node %>"/>
-        <input type="hidden" name="vhost" value="<%= link.vhost %>"/>
+        <input type="hidden" name="node" value="<%= fmt_node(link.node) %>"/>
+        <input type="hidden" name="vhost" value="<%= fmt_string(link.vhost) %>"/>
         <input type="submit" value="Restart"/>
         </form>
     </td>
